# Dependency-Map

./: .env.example  .gitignore  README.md  decision-log.md  docker-compose.yml  idea.md  idea.txt  package-lock.json  progress-log.md
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: celery_app.py  config.py  deps.py  main.py  observability.py  supabase_utils.py
backend/app/routers/: analyses.py  api_keys.py  ast.py  branches.py  cross_repo.py  feedback.py  health.py  orgs.py  repo_lookup.py  webhooks.py
backend/app/services/: analysis_planner.py  analysis_runs.py  asg_builder.py  ast_parser.py  embedding_engine.py  finding_presenter.py  git_workspace.py  github_checks.py  github_client.py  verifier_service.py
backend/app/worker/: cpg_contract_tasks.py  cross_repo_tasks.py  tasks.py
backend/cpg_builder/: README.md  __init__.py  ast_builder.py  compare_rankers.py  exporters.py  fusion.py  git_diff.py  invariants.py  label_ranker_results.py  main.py  parser.py  path_miner.py  prepare_graphcodebert_dataset.py  prepare_reasoner_dataset.py  pyg.py  ranker.py  reasoner.py  reasoner_providers.py  repo_index.py  schema.py  scorer.py  semantic_builder.py  stitcher.py  utils.py  verifier.py  visualize_sample.py
backend/examples/: cpg_demo_diff.json  cpg_demo_summary.json
backend/scripts/: __init__.py  aggregate_ranker_labels.py  build_asg.py  build_ast.py  train_graphcodebert.py
backend/tests/: test_analysis_planner.py  test_analysis_routes.py  test_api_contracts.py  test_asg_builder.py  test_ast_parser.py  test_build_asg_script.py  test_build_ast_script.py  test_cpg_builder.py  test_cpg_offline_scorer.py  test_export_pyg_json.py  test_git_workspace.py  test_health.py  test_path_miner_roundtrip.py  test_prepare_reasoner_dataset.py  test_reasoner_providers.py  test_stitcher_metrics.py  test_stitcher_openapi.py  test_train_graphcodebert_script.py  test_verifier_service.py
(+55 files in other folders)
